--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,160 +13,134 @@ on:
           - "MAJOR"
           - "MINOR"
           - "PATCH"
-#      ref:
-#        type: string
-#        required: false
-#        description: The git ref to use for the release
-#        default: main
 
 jobs:
-
   test-nightly:
     name: Run nightly tests
     runs-on: ubuntu-latest
+    outputs:
+      circleci_workflow_number: ${{ steps.nightly_tests.outputs.circleci_workflow_number }}
     steps:
       - name: Checkout wandb/wandb
         uses: actions/checkout@v3
-        with:
-          repository: wandb/wandb
-          path: wandb
       - uses: actions/setup-python@v4
         with:
           python-version: 3.9
       - name: Run nightly tests
+        id: nightly_tests
         run: |
           cd wandb
           pip install -e .
-          CIRCLECI_TOKEN=${{ secrets.MUMBOJUMBO_TOKEN }} python tools/circleci-tool.py --dryrun trigger-nightly
-          # CIRCLECI_TOKEN=${{ secrets.MUMBOJUMBO_TOKEN }} python tools/circleci-tool.py trigger-nightly --wait
+          OUTPUT=$(CIRCLECI_TOKEN=${{ secrets.CIRCLECI_TOKEN }} python tools/circleci-tool.py --dryrun trigger-nightly)
+          # OUTPUT=$(CIRCLECI_TOKEN=${{ secrets.CIRCLECI_TOKEN }} python tools/circleci-tool.py trigger-nightly --wait)
+          # UUID=$(echo "$OUTPUT" | grep UUID | awk '{print $2}')
+          # NUMBER=$(echo "$OUTPUT" | grep Number | awk '{print $2}')
+          # echo "circleci_workflow_uuid=$UUID" >> $GITHUB_OUTPUT
+          # echo "circleci_workflow_number=$NUMBER" >> $GITHUB_OUTPUT
+          # todo: remove this line
+          echo "circleci_workflow_number=19249" >> $GITHUB_OUTPUT
+        continue-on-error: true
+      - name: Post notification to the sdk-release Slack channel
+        id: slack
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          channel-id: ${{ secrets.SLACK_SDK_RELEASE_CHANNEL_ID }}
+          payload: |
+            {
+              "text": "Nightly tests finished. Proceed with release?",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "<https://app.circleci.com/pipelines/github/wandb/wandb/${{ steps.nightly_tests.outputs.circleci_workflow_number }}|:test_tube: Nightly tests finished>"
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ":rocket: @sdk-team: <https://github.com/wandb/wandb/actions/runs/${{github.run_id}}|Proceed with the release?>"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
-  prepare-release:
-    name: Prepare Release
+  verify-deploy:
+    runs-on: ubuntu-latest
     environment: "release"
-    if: always()
     needs:
       - test-nightly
-    runs-on: ubuntu-latest
-    outputs:
-      release-version: ${{ steps.cz.outputs.release_version }}
-      release-branch: ${{ steps.cz.outputs.release_branch }}
     steps:
-      - name: Checkout main for current release
-        uses: actions/checkout@v3
-#        with:
-#          ref: ${{ github.event.inputs.ref }}
-      - name: Setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-      - name: Install python dependencies
-        id: install-python-deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install commitizen -U
-      - name: Setup git
-        id: setup-git
-        run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-          git fetch --tags
-      - name: Bump version and generate changelog entry with Commitizen (cz)
-        id: cz
-        run: |
-          new_version="$(cz bump --increment ${{ github.event.inputs.bump-kind }} --yes --dry-run | grep bump | awk '{print $NF}')"
-          echo "release_version=${new_version}" >> $GITHUB_OUTPUT
-          echo "release_branch=release-${new_version}" >> $GITHUB_OUTPUT
-          echo "release_tag=v${new_version}" >> $GITHUB_OUTPUT
-          cz bump --increment ${{ github.event.inputs.bump-kind }} -ch --yes
-      - name: Create release PR
-        id: create-pr
-        uses: peter-evans/create-pull-request@v4
-        with:
-          committer: GitHub <noreply@github.com>
-          author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
-          branch: ${{ steps.cz.outputs.release_branch }}
-          delete-branch: true
-          title: "chore(sdk): release ${{ steps.cz.outputs.release_version }} version"
-          commit-message: "[create-pull-request] automated change of workflow ${{ github.run_id }} attempt ${{ github.run_number }}"
-      - name: Create release notes
-        uses: ncipollo/release-action@v1
-        with:
-          allowUpdates: true
-          draft: false
-          name: ${{ steps.cz.outputs.release_tag }}
-          generateReleaseNotes: true
-          tag: ${{ steps.cz.outputs.release_tag }}
-          prerelease: false
-          updateOnlyUnreleased: false
-          commit: ${{ steps.cz.outputs.release_branch }}
+        - name: Verify nightly tests passed
+          run: |
+            echo "Nightly tests finished. Proceed?"
 
-  build-and-publish:
-      name: Build and Publish
-      environment: "release"
-      runs-on: ubuntu-latest
-      if: always()
-      needs: prepare-release
-      steps:
-      - name: Checkout ${{ needs.prepare-release.outputs.release-branch }} for current release
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ needs.prepare-release.outputs.release-branch }}
-      - name: Setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-      - name: Build
-        run: |
-          pip install wheel
-          rm -rf dist build
-          python setup.py sdist bdist_wheel
-          ls -l dist
-      - name: Publish
-        run: |
-          pip install twine
-          twine upload --username=__token__ --password=${{ secrets.TEST_PYPI_TOKEN }} --repository testpypi dist/*
-      - name: Test install
-        run: |
-          pip install --index-url https://test.pypi.org/simple/ --no-deps mumbojumbo
-          version=`python -c "import mumbojumbo as mj; print(mj.__version__)"`
-          if [ $version != ${{ needs.prepare-release.outputs.release-version }} ]; then
-            echo "Version mismatch: $version != ${{ needs.prepare-release.outputs.release-version }}"
-            exit 1
-          fi
+  call-bump-version-workflow:
+    name: Call bump-version workflow
+    needs:
+      - verify-deploy
+    uses: ./.github/workflows/bump-version.yml
+    with:
+      branch: ${{ github.ref }}
+      bump-kind: ${{ github.event.inputs.bump-kind }}
 
-  post-release:
-    name: Post Release Actions
+  call-python-package-workflow:
+    name: Call python-package workflow
+    uses: ./.github/workflows/python-package.yml
+    secrets: inherit
+    needs:
+      - call-bump-version-workflow
+    with:
+      branch: ${{ needs.call-bump-version-workflow.outputs.branch }}
+
+  create-release-notes:
     runs-on: ubuntu-latest
     needs:
-      - build-and-publish
-      - prepare-release
-    if: always()
+      - call-bump-version-workflow
+      - call-python-package-workflow
     steps:
-      - name: Checkout ${{ needs.prepare-release.outputs.release-branch }} for current release
-        uses: actions/checkout@v3
+      - uses: ncipollo/release-action@v1
         with:
-          ref: ${{ needs.prepare-release.outputs.release-branch }}
-      - name: Setup python
-        uses: actions/setup-python@v4
+          allowUpdates: true
+          draft: true  # todo: change to false
+          name: ${{ needs.call-bump-version-workflow.outputs.tag }}
+          generateReleaseNotes: true
+          tag: ${{ needs.call-bump-version-workflow.outputs.tag }}
+          prerelease: false
+          updateOnlyUnreleased: false
+          commit: ${{ needs.call-bump-version-workflow.outputs.branch }}
+
+  verify-package:
+    runs-on: ubuntu-latest
+    needs:
+      - call-python-package-workflow
+      - call-bump-version-workflow
+    steps:
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
-      - name: Install python dependencies
-        id: install-python-deps
+           python-version: '3.9'
+      - name: verify version is latest
         run: |
-          echo ${{ needs.prepare-release.outputs.release-branch }}
-          python -m pip install --upgrade pip
-          pip install bump2version -U
-      - name: Setup git
-        id: setup-git
-        run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-          git fetch --tags
-      - name: Bump version
-        run: |
-          bump2version patch --no-tag
-          bump2version devkind --no-tag
-          git push origin ${{ needs.prepare-release.outputs.release-branch }}
-      - name: Nudge to merge the Release PR to main and unfreeze the release branch
-        run: |
-          echo "Please check and merge the release PR to main and unfreeze the main branch"
+          bump_verions=${{ needs.call-bump-version-workflow.outputs.version }}
+          package_version=${{ needs.call-python-package-workflow.outputs.version }}
+          if [ "$bump_verions" != "$package_version" ]; then
+              echo "The value of bumped version ($bump_verions) is different from the value of packaged version ($package_version)"
+              exit 1
+          fi
+
+  call-bump-dev-version-workflow:
+    name: Call bump-dev-version workflow
+    uses: ./.github/workflows/bump-dev-version.yml
+    needs:
+      - call-bump-version-workflow
+      - create-release-notes
+      - call-python-package-workflow
+      - verify-package
+    with:
+      branch: ${{needs.call-bump-version-workflow.outputs.branch}}
+      # - name: Nudge to merge the Release PR to main and unfreeze the release branch
+      #   run: |
+      #     echo "Please check and merge the release PR to main and unfreeze the main branch"
