--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ major_version_zero = true
 version = "0.13.11.dev1"
 version_files = ["setup.py", "setup.cfg", "wandb/__init__.py"]
 tag_format = "v$major.$minor.$patch$prerelease"
+changelog_incremental = true
 #post_bump_hooks = [
 #  "tools/cz_version_to_dev.sh",
 #]
