ci(sdk): use the commitizen action (#4978)

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -39,37 +39,18 @@ jobs:
       - name: Checkout out
         uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.branch || github.ref }}
-      - name: Setup python
-        uses: actions/setup-python@v4
+          ref: ${{ inputs.branch }}
+          fetch-depth: 0
+          token: "${{ secrets.GITHUB_API_TOKEN }}"
+      - id: cz
+        name: Create bump and changelog
+        uses: commitizen-tools/commitizen-action@0.16.3
         with:
-          python-version: "3.9"
-      - name: Setup git
+          github_token: ${{ secrets.GITHUB_API_TOKEN }}
+          branch: "bump-version-test"
+          increment: ${{ github.event.inputs.bump-kind }}
+      - name: Print Version
         run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
-          git fetch --tags
-      - name: Install python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install commitizen -U
-
-      - name: Bump version and generate changelog entry with Commitizen (cz)
-        id: cz
-        run: |
-          output=$(cz bump --increment ${{ github.event.inputs.bump-kind }} -ch --yes)
-          new_version=$(echo "$output" | grep bump | tail -1 | awk '{print $NF}')
-          echo "version=${new_version}" >> $GITHUB_OUTPUT
-          echo "branch=release-${new_version}" >> $GITHUB_OUTPUT
-          echo "tag=v${new_version}" >> $GITHUB_OUTPUT
-
-      - name: Create release PR
-        id: create-pr
-        uses: peter-evans/create-pull-request@v4
-        with:
-          committer: GitHub <noreply@github.com>
-          author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
-          branch: ${{ steps.cz.outputs.branch }}
-          delete-branch: true
-          title: "chore(sdk): release ${{ steps.cz.outputs.version }} version"
-          commit-message: "chore(sdk): automated change of workflow ${{ github.run_id }} attempt ${{ github.run_number }}"
+          echo "version=${{ steps.cz.outputs.version }}" >> $GITHUB_OUTPUT
+          echo "branch=release-${{ steps.cz.outputs.version }}" >> $GITHUB_OUTPUT
+          echo "tag=v${{ steps.cz.outputs.version }}" >> $GITHUB_OUTPUT
