--- a/tox.ini
+++ b/tox.ini
@@ -211,7 +211,7 @@ basepython=python3
 skip_install = true
 deps=
     types-click==7.1.8
-    mypy==0.991
+    mypy
     lxml
     grpcio
 setenv =
