--- a/mypy.ini
+++ b/mypy.ini
@@ -79,6 +79,9 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
+[mypy-wandb.apis.importers.*]
+ignore_errors = False
+
 [mypy-wandb.integration.fastai.*]
 ignore_errors = False
 disallow_incomplete_defs = True
