--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -37,6 +37,7 @@ rdkit-pypi; sys_platform != 'darwin' or (sys_platform == 'darwin' and platform.m
 rdkit-pypi; python_version > '3.7' and sys_platform == 'darwin' and platform.machine == 'arm64'
 httpx>=0.22.0  # 0.23.0 dropped Python 3.6; we can upgrade once we drop it too
 respx>=0.20.0  # 0.21.0 dropped Python 3.6; we can upgrade once we drop it too
+pytest-benchmark
 
 # TODO: fix extra dependencies
 #   We need to improve how we do requirements_dev as specifying .[extra] creates
