--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist=
     mypy,
     flake8,
     docstrings,
-    py{36,37,38,39,launch,importer},
+    py{36,37,38,39,launch},
     func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,docs,
             imports{1,2,3,4,5,6,7,8,9,10,11,12},noml,grpc}-py37,
     standalone-{cpu,gpu,tpu,local}-py38,
@@ -42,19 +42,19 @@ deps =
     bokeh             # TODO: remove after conftest.py refactor
     nbclient          # TODO: remove after conftest.py refactor
 
-[testenv:py{36,37,38,39,310,launch,importer}]
+[testenv:py{36,37,38,39,310,launch}]
 deps =
     {[unitbase]deps}
     -r{toxinidir}/requirements_dev.txt
 install_command =
-    py{36,37,38,39,launch,importer}: pip install --timeout 600 --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
+    py{36,37,38,39,launch}: pip install --timeout 600 --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
 passenv =
     USERNAME
     CI_PYTEST_SPLIT_ARGS
     CI_PYTEST_PARALLEL
     CI
 setenv =
-    py{36,37,38,39,310,launch,importer}: COVERAGE_FILE={envdir}/.coverage
+    py{36,37,38,39,310,launch}: COVERAGE_FILE={envdir}/.coverage
     py{37,39}: WINDIR=C:\\Windows
 # Pytorch installations on non-darwin need the `-f`
 whitelist_externals =
@@ -64,7 +64,6 @@ commands =
     mkdir -p test-results
     py{36,37,38,39,310}:     python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:10} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/pytest_tests}
     pylaunch:                python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:4} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/pytest_tests/unit_tests_old/tests_launch/}
-    pyimporter:              python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:2} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/pytest_tests/system_tests/test_importers}
 
 [testenv:unit-s_nb-py{36,37,38,39,310}]
 deps =
