Add ruff to .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,13 @@
     "./wandb/vendor/graphql-core-1.1"
   ],
 
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.ruff": true,
+      "source.organizeImports.ruff": true
+    }
+  },
+
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": true,
   "python.linting.mypyEnabled": false,
